# 3DPuzzleQuiz

./: .gitignore  .gitmodules  API.md  Client-flow‐chart.md  Home.md  README.md  build.bat  build.py  build.sh  index.html  start.bat  start.sh  temp.html
AdminWebpage/: admin.css  (+9 more)
Server/: .env  API.py  QuizDB.py  README.md  SQL Formatting Util file.sql  build.env  generateTestData.py  generateTestdata.py  main.py  manageQuizData.py  manageQuizdata.py  printQuizTestThisHasToBeHere.py  pyproject.toml  server.py  server_specifics.env  sql.txt  temp.html
Server/Teszt/: Megoldókulcsok.xlsx  MesterLista.txt  MesterLista.xlsx  generateBarcodes.py  generator.py  masterList.json
Server/Teszt/Minták/: MintaListák.xlsx  MintaMegoldókulcsok.xlsx
Server/_OldTests/: 100asTeszt.xlsx  Listák.xlsx  MesterLista.xlsx  generateBarcodes.py  generateTestData.py  generator.py  masterList.json  real_testdata.json
Server/_OldTests/DMCs/: BOX_UIDs.docx
Server/_OldTests/Minták/: MintaTesztek.xlsx
Server/_OldTests/datamatrix_modified/: datamatrix.py
Server/_Teszt/: MesterLista.txt  MesterLista.xlsx  Tesztek.xlsx  generateBarcodes.py  masterList.json
Server/_Teszt/DMCs/: FullNameDMCs.docx
Server/_Teszt/Minták/: Minta100asTeszt.xlsx
Server/_utils/: FormattingFile.md  FormattingFile.sql  SQL Formatting Util file.sql  eventTest.py  generateTestData.py  server.py  temp.html  test.py  test_sheets.json
Server/data/: CodewordParts.json  PaperQuizTemplate.html  quizData.db  quizData.sqlite
Server/masterdata/: MesterLista.txt  generateBarcodes.py  generateTestData.py  masterList.json  real_testdata.json
Server/modules/: adminAPI.py  clientAPI.py  fileServer.py  htmlReplacer.py  pdfGenerator.py  printer.py  quizDB.py  quizDBManager.py  scanner.py  utils.py  wsUtils.py
Server/web/: index.html
Server/webpages/: admin.css  admin.html  admin.js  test_sheets.json
(+147 files in other folders)
