[project]
name = "server"
version = "0.1.0"
description = "A 3D Puzzle Quizzer back-end application."
authors = [
    {name = "BaconHoney"}
]
package-mode = false
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiohttp (>=3.12.14,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "yattag (>=1.16.1,<2.0.0)",
    "python-barcode (>=0.15.1,<0.16.0)",
    "pyppeteer (>=2.0.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

