[project]
name = "server"
version = "0.1.0"
description = "A 3D Puzzle Quizzer back-end application."
authors = [
    {name = "BaconHoney"}
]
package-mode = false
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiohttp (>=3.12.14,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "yattag (>=1.16.1,<2.0.0)",
    "pyppeteer (>=2.0.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "python-barcode (>=0.16.1,<0.17.0)",
    "pywin32 (>=311,<312) ; sys_platform == \"win32\"",
    "evdev (>=1.9.2,<2.0.0) ; sys_platform == \"linux\"",
    "certifi (>=2025.8.3,<2026.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

